--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cli-table": "^0.3.1",
     "commander": "^2.7.1",
+    "moment": "^2.9.0",
     "nconf": "^0.7.1",
     "swig": "^1.4.2",
     "sync-request": "^2.0.1"
