--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cli-table": "^0.3.1",
+    "colors": "^1.0.3",
     "commander": "^2.7.1",
     "moment": "^2.9.0",
     "nconf": "^0.7.1",
