--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redmine-cli",
-  "version": "0.1.1",
+  "version": "0.4.0",
   "description": "A NodeJS Redmine client.",
   "preferGlobal": "true",
   "directories": {
@@ -13,6 +13,7 @@
     "commander": "^2.7.1",
     "moment": "^2.9.0",
     "nconf": "^0.7.1",
+    "open": "0.0.5",
     "swig": "^1.4.2",
     "sync-request": "^2.0.1"
   },
