--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "bin": "bin",
     "test": "test"
   },
+  "devDependencies": {
+    "jasmine-node": "^1.14.5"
+  },
   "dependencies": {
     "cli-table": "^0.3.1",
     "colors": "^1.0.3",
@@ -18,7 +21,7 @@
     "sync-request": "^2.0.1"
   },
   "scripts": {
-    "test": "node test/test.js"
+    "test": "jasmine-node spec/"
   },
   "repository": {
     "type": "git",
