--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,6 @@ node_js:
 
 notifications:
   email: false
+
+after_success:
+  - istanbul cover jasmine-node --captureExceptions spec/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
