--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "test"
   },
   "devDependencies": {
-    "jasmine-node": "^1.14.5"
+    "coveralls": "^2.11.2",
+    "istanbul": "^0.3.13",
+    "jasmine-node": "^1.14.5",
+    "rewire": "^2.3.1"
   },
   "dependencies": {
     "cli-table": "^0.3.1",
