Moved some dependencies to dev again. Added some debug commands to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ notifications:
   email: false
 
 after_success:
+  - pwd
+  - ls -la ./node_modules/.bin/
   - istanbul cover jasmine-node --captureExceptions spec/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
