--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "sync-request": "^2.0.1"
   },
   "scripts": {
-    "test": "jasmine-node spec/"
+    "test": "istanbul cover jasmine-node --captureExceptions spec/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
